# tachyon

./: .gitignore  LICENSE  README.md  benchmark.py  main.py  pyproject.toml  setup.py
common/: layers.h  utils.cpp
include/: tensor.h  tokenizer.h
include/cpu/: ops.h  sampler.h
models/: attention.py  block.py  linear.py  llama.py  rope.py  tokenize_base.py
scripts/: __init__.py  convert_weights.py  download_hf.py
src/: tokenizer.cpp
src/cpu/: infer.cpp  ops.cpp  sampler.cpp
tachyon/: utils.py
tachyon/engine/: llm.py
tachyon/models/: __init__.py  attention.py  block.py  cache.py  linear.py  llama.py  paged_attention.py  rope.py  tokenize_base.py
tests/: test_embed.cpp  test_mha.cpp  test_tensor.cpp
