[project]
name = "tachyon"
version = "0.1.0"
description = "Tachyon is a C++ inference engine for LLMs that run on CPU"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "huggingface-hub>=1.2.1",
    "numpy>=2.3.5",
]

[dependency-groups]
dev = [
    "safetensors>=0.7.0",
    "torch>=2.9.1",
]
