[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tachyon"
version = "0.1.0"
description = "an llm inference library for consumer hardware"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.10.0",
    "transformers>=5.3.0",
]

[tool.setuptools.packages.find]
where = ["."]

[dependency-groups]
dev = [
    "matplotlib>=3.10.8",
]
